Updated dependencies and fixed dependency errors for TestFX